see interactive_projection.git

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" charset="utf-8" src="js/jquery-ui-1.10.4.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/d3.v3.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/db.js"></script>
+		<script type="text/javascript" charset="utf-8" src="js/menu.js" ></script>
 	<script type="text/javascript" charset="utf-8" src="js/main.js" ></script>
 	<script>
 
